# myanmar-lnp-dataset

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
api/: augment.py  data_loader.py  preprocess.py  vectorizer.py
api/models/: classifier.py  trainer.py
api/utils/: file_utils.py  metrics.py
config/: labels.yaml  settings.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml
github/workflows/: ci.yml
layers/cli/: main_cli.py
layers/gradio/: app.py
layers/streamlit/: app.py
notebooks/: README.md
scripts/: setup_env.sh
tests/test_api/: test_data_loader.py  test_preprocess.py
